--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .color-gradient {
+    @apply bg-gradient-to-bl from-primary via-transparent to-secondary;
+  }
+
+  .header-gradient {
+    @apply bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-white via-white to-black;
+  }
+}
+
+@layer base {
+  html {
+    font-family: Inter, system-ui, sans-serif;
+  }
+
+  #root {
+    @apply bg-darkBg flex h-screen w-screen flex-col overflow-hidden;
+  }
+}
