--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .color-gradient {
+    @apply bg-gradient-to-bl from-primary via-primary to-secondary;
+  }
+
+  .header-gradient {
+    @apply bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-white via-white to-black;
+  }
+}
+
+@layer base {
+  html {
+    font-family: "Nunito Sans", sans-serif;
+    @apply text-sm m-0 text-white font-light bg-darkBg;
+  }
+
+  #root {
+    @apply flex h-screen w-screen flex-col overflow-hidden;
+  }
+}
